# cpp_excercises

./: .gitignore  CMakeLists.txt  README.md
include/: IPv4.h  math_tasks.h
src/: CMakeLists.txt
tests/: CMakeLists.txt  lf_test.cpp  math_test.cpp  testing_test.cpp
